Movie poster placeholder added + fixed text cut off in search for mobile screens

--- a/client/src/home/movieCard/movieCard.css
+++ b/client/src/home/movieCard/movieCard.css
@@ -9,3 +9,16 @@
   width: 150px;
   border-radius: 5px;
 }
+
+.imageNotFoundHomeContainer{
+  height: 225px;
+  width: 150px;
+  border-radius: 5px;
+  background-color: #a8a8a8;
+}
+
+.imageNotFoundHome{
+  width: 55px;
+  margin: 85px 0px 0px 48px;
+  opacity: 0.5;
+}
